samples/_failures_safe/1761483414_c4cc49_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31cbd2f6.c: In function ‘main’:
./samples/SAFE/__tmp_31cbd2f6.c:170:28: error: expected ‘)’ at end of input
  170 |     initialize_graph(&graph
      |                     ~      ^
      |                            )
./samples/SAFE/__tmp_31cbd2f6.c:170:5: error: too few arguments to function ‘initialize_graph’
  170 |     initialize_graph(&graph
      |     ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_31cbd2f6.c:16:6: note: declared here
   16 | void initialize_graph(Graph *g, int node_count) {
      |      ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_31cbd2f6.c:170:5: error: expected declaration or statement at end of input
  170 |     initialize_graph(&graph
      |     ^~~~~~~~~~~~~~~~
